# NEF2

./: .gitattributes  .gitignore  404.html  DOCS_UPDATES.md  LICENSE  MANIFEST.in  README.md  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.txt  architecture.md  docs.html  index.html  index.txt  model.nef  prd.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
assets/: agents-BC7n5ftH.js  agents-CY6_vgjK.js  agents-CmMv89sN.js  architecture-BJftSNZq.js  architecture-CAqanKx-.js  architecture-DhSpwL2x.js  compiler-CR7XE7dy.js  compiler-CkDUpChu.js  compiler-D13b5mvh.js  dal-D6Nue7cb.js  dal-DgjRVYm1.js  dal-DnPSjbpM.js  data-BWlzl_4W.js  data-CBM8mV6G.js  data-DLQ-LzKc.js  developer-guide-Bhb8e16v.js  developer-guide-G6kFeggv.js  developer-guide-q0HNsv9A.js  distributed-CFEi22oU.js  distributed-CYY2366t.js  distributed-DOzkeB-8.js  faq-0fN39B_q.js  faq-BAc3yhml.js  faq-CHDPuJvI.js  getting-started-Brsqzerl.js  getting-started-C84cLlzh.js  getting-started-OH43OJ6Z.js  hardware-CtzFHrB1.js  hardware-DGDFuD9S.js  hardware-DRkPMl1U.js  hypercache-BLzldHYz.js  hypercache-C6Do_vtl.js  hypercache-qXaLSGVC.js  index-BkOgH6Y0.css  index-Bm8i0iSn.js  index-CtgiBv6A.js  index-mj3Ep446.js  introduction-BfQQtWmL.js  introduction-BmfCnLFJ.js  introduction-D5AoyeFQ.js  (+39 more)
csrc/: nef_core.cpp
csrc/core/: backend_api.h  comm.h
csrc/nef_rust/: Cargo.toml
docs/: ARCHITECTURE.md  DEVELOPER.md  GETTING_STARTED.md  HARDWARE.md  __next._full.txt  __next._tree.txt  __next.docs.__PAGE__.txt  agents.html  api-reference.html  api-reference.txt  architecture.html  cli.html  cli.txt  compiler.html  compiler.txt  dal.html  data.html  developer-guide.html  distributed.html  distributed.txt  faq.html  faq.txt  format-spec.html  format-spec.txt  getting-started.html  gpu-backends.html  gpu-backends.txt  hardware.html  hardware.txt  hypercache.html  introduction.html  metrics.html  metrics.txt  mobile.html  nef-core.html  nef-core.txt  networking.html  networking.txt  nn.html  nn.txt  (+13 more)
docs-site/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.js
docs-site/app/: layout.tsx  page.tsx
docs-site/components/: Header.tsx  MDXComponents.tsx  OnThisPage.tsx  Sidebar.tsx  icons.tsx
docs-site/content/: compiler.mdx  data.mdx  developer-guide.mdx  distributed.mdx  hardware.mdx  introduction.mdx  metrics.mdx  mobile.mdx  nef-core.mdx  networking.mdx  serialization.mdx  simulation.mdx  tensors.mdx
docs-site/lib/: nav.ts
docs-site/src/: App.jsx  index.css
docs-site/styles/: globals.css
docs/agents/: __next._full.txt  __next._tree.txt
docs/api-reference/: __next._tree.txt
docs/architecture/: __next._full.txt  __next._tree.txt  __next.docs.$d$slug.__PAGE__.txt
docs/cli/: __next._tree.txt
docs/compiler/: __next._full.txt  __next._tree.txt
docs/dal/: __next._full.txt  __next._tree.txt
docs/data/: __next._full.txt  __next._tree.txt
docs/developer-guide/: __next._full.txt  __next._tree.txt
docs/distributed/: __next._full.txt  (+1 more)
nef2/: __init__.py  byte_tokenizer.py  data.py  gpu.py  memory.py  metrics.py  nn.py  optim.py  parallel.py  serialization.py  tensor.py  tokenizer.py
tests/: test_gpu_optional.py  test_smoke.py
(+121 files in other folders)
