[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nef2"
version = "0.1.0"
description = "A tiny NEF2-owned neural network and LLM training framework with a pure-Python CPU core and CUDA driver backend."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "NEF2 Authors" }]
keywords = ["llm", "autograd", "deep-learning", "neural-network", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.urls]
Homepage = "https://pypi.org/project/nef2/"

[project.scripts]
nef2-wikipedia-200m = "nef2.cli.wikipedia_200m:main"
nef2-gpu-stress = "nef2.cli.gpu_stress:main"

[tool.setuptools.packages.find]
include = ["nef2*"]
