[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nef2"
version = "0.2.0"
description = "A tiny NEF2-owned neural network and LLM training framework with a pure-Python CPU core and CUDA driver backend."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "gpt", "neural-network", "cuda", "autograd", "training"]

[project.urls]
Homepage = "https://github.com/Hexa08/NEF2"
Repository = "https://github.com/Hexa08/NEF2.git"

[project.scripts]
nef2-gpu-stress = "nef2.cli.gpu_stress:main"
